--- a/style.css
+++ b/style.css
@@ -11,21 +11,21 @@
   font-weight: 600;
   border: none;
   padding: 10px 18px;
+  cursor: pointer;
 }
 
 /* banner related styles  */
 .banner-container {
-  height: 800px;
-  max-width: 1600px;
   background-image: url(images/banner/banner3.png);
   background-repeat: no-repeat;
   text-align: right;
   color: white;
-  padding: 200px 200px;
+  padding: 200px 135px;
+  background-size: contain;
 }
 .banner-title {
   color: #fff;
-  font-size: 65px;
+  font-size: 60px;
   font-weight: 700;
 }
 .banner-des {
@@ -34,4 +34,45 @@
   font-size: 16px;
   font-weight: 400;
   margin: 15px 15px;
+}
+
+/* record related styles  */
+.records {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 200px;
+  
+  
+}
+.record{
+    margin-top: 80px;
+}
+
+.fa-solid {
+  color: #16d887;
+  margin-right: 10px;
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+.record-list li {
+  list-style: none;
+}
+.my-pic {
+  width: 400px;
+  height: 500px;
+}
+.record-title {
+  color: #151414;
+
+  font-size: 40px;
+  font-weight: 700;
+}
+.record-des{
+    color:  #444343;
+font-size: 16px;
+
+font-weight: 400;
+margin: 24px 30px;
+;
 }
