--- a/style.css
+++ b/style.css
@@ -42,11 +42,9 @@
   align-items: center;
   justify-content: space-around;
   padding: 200px;
-  
-  
 }
-.record{
-    margin-top: 80px;
+.record {
+  margin-top: 80px;
 }
 
 .fa-solid {
@@ -68,11 +66,41 @@
   font-size: 40px;
   font-weight: 700;
 }
-.record-des{
-    color:  #444343;
-font-size: 16px;
+.record-des {
+  color: #444343;
+  font-size: 16px;
 
-font-weight: 400;
-margin: 24px 30px;
-;
+  font-weight: 400;
+  margin: 24px 30px;
+}
+/* plan section styles  */
+.plan-head {
+  color: #151414;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
+  margin: 50px 0px;
+}
+.all-plans {
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  text-align: center;
+}
+
+.call-now{
+    background-image:linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0.00) 100%),
+     url('images/watch.png');
+      
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 55px;
+    border-radius: 8px;
+    text-align: left;
+    margin: 150px 200px;
+}
+.call-title{
+    color: white;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
