--- a/style.css
+++ b/style.css
@@ -88,19 +88,70 @@
   text-align: center;
 }
 
-.call-now{
-    background-image:linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0.00) 100%),
-     url('images/watch.png');
-      
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 55px;
-    border-radius: 8px;
-    text-align: left;
-    margin: 150px 200px;
+.call-now {
+  background-image: linear-gradient(90deg, #005fac 0%, rgba(0, 95, 172, 0) 100%),
+    url("images/watch.png");
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 55px;
+  border-radius: 8px;
+  text-align: left;
+  margin: 150px 200px;
 }
-.call-title{
-    color: white;
-    margin-top: 20px;
-    margin-bottom: 10px;
+.call-title {
+  color: white;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+/* footer related styles  */
+.footer-container {
+  background-color: #151414;
+  color: white;
+  display: flex;
+  padding: 130px 230px;
+  gap: 300px;
+  /* align-items: center; */
+}
+
+.info-title {
+  color: #f8f8f8;
+  font-size: 30px;
+  font-weight: 700;
+}
+.info-des {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 16px 0px;
+}
+.phone {
+  margin: 16px 0px;
+}
+.icon {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+.subscribe-title {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+}
+.input-email {
+  padding: 12px 30px;
+  border-radius: 8px;
+  border: 1px solid #fff;
+  background-color: #151414;
+  margin: 15px 0px;
+  color: white;
+}
+.subs-btn{
+    border-radius: 8px;
+background: #005FAC;
+padding: 15px 30px;
+color: #FFF;
+font-family: Inter;
+font-weight: 600;
 }
